fix: fixed operations routes (#27)
* fix: fixed operations routes

* chore: changed reorder term to 'update'
