# openapi3.yaml
@@ -123,7 +123,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/error'
-  /layer/mosaic:
+  /mosaic:
     get:
       operationId: getLayers
       tags:
@@ -180,10 +180,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/error'
     put:
-      operationId: setZOrder
+      operationId: updateMosaic
       tags:
         - Mosaic
-      summary: reorder mosaic layers
+      summary: update mosaic layers
       responses:
         204:
           description: updated
